# fused-probfx

./: .gitignore  LICENSE.md  README.md  TODO.md  benchmark.sh  cabal.project  fused-probfx.cabal  nano.300559.save  prob-fx.cabal
Testing/: FooFusedEffects.hs  FooProbFX.hs
benchmarking/fused-probfx/: BenchmarkPrograms.hs  BenchmarkTests.hs  bench.sh  fused-probfx-benchmarking.cabal  fused-probfx-benchmarking.prof  fused-probfx-benchmarking.prof.old
benchmarking/monad-bayes/: BenchmarkTests.hs  README.md  bench.sh  mbayes-benchmarking.cabal
benchmarking/prob-fx/: BenchmarkPrograms.hs  BenchmarkTests.hs  bench.sh  prob-fx-benchmarking.cabal
benchmarking/turing/: README.md  bench.sh
benchmarking/turing/turing_benchmarks/src/: turing_benchmarks.jl
benchmarks/: README.md  benchmark.py
benchmarks/fused-probfx/: BenchmarkPrograms.hs  BenchmarkTests.hs  cabal.project  fused-probfx-benchmarking.cabal
benchmarks/monad-bayes/: README.md  bench.sh  cabal.project  mbayes-benchmarking.cabal
benchmarks/prob-fx/: BenchmarkPrograms.hs  BenchmarkTests.hs  README.md  cabal.project  prob-fx-benchmarking.cabal
benchmarks/turing/: README.md  bench.sh
benchmarks/turing/turing_benchmarks/: Manifest.toml  Project.toml
benchmarks/turing/turing_benchmarks/src/: turing_benchmarks.jl
examples/: CoinFlip.hs  HMM.hs  LDA.hs  LinRegr.hs  LogRegr.hs  Main.hs  Presentation.hs  README.md  Radon.hs  SIR.hs  SIRNonModular.hs  School.hs  graph.py
examples/Test/: Main.hs
examples_old/: HMM.hs  LogRegr.hs  Radon.hs  SIR.hs  SIRNonModular.hs  School.hs
src/: Bar.hs  Env.hs  FindElem.hs  Foo.hs  Model.hs  OpenSum.hs  PrimDist.hs  Prog.hs  Sampler.hs  Trace.hs
src/Control/: Model.hs  SIM.hs
src/Control/Carrier/: Dist.hs  Draw.hs  EffUnion.hs  LPTracer.hs  ObsReader.hs  Observe.hs  Product.hs  SampTracer.hs  Sample.hs  SampleTracer.hs  Sampler.hs
src/Control/Effect/: Dist.hs  Draw.hs  EffUnion.hs  ObsReader.hs  Observe.hs  SampObs.hs  Sample.hs  Sampler.hs
src/Data/WorldPeace/: Extra.hs
src/Data/WorldPeace/Product/: Extra.hs
src/Effects/: Dist.hs  ObsReader.hs  State.hs  Writer.hs
src/FusedEffects/: ObsReader.hs
src/FusedInference/: SIM.hs
src/Inference/: LW.hs  MH.hs  SIM.hs
src_old/: Model.hs  OpenSum.hs  PrimDist.hs  Prog.hs
src_old/Effects/: Dist.hs  Lift.hs  State.hs
src_old/Inference/: LW.hs  MH.hs
