cabal-version:       3.0
name:                prob-fx
version:             0.1.0.2
license:             BSD-3-Clause
license-file:        LICENSE.md
copyright:           2022 Minh Nguyen
stability:           experimental
author:              Minh Nguyen
maintainer:          minhnguyen1995@googlemail.com
homepage:            https://github.com/min-nguyen/prob-fx/
synopsis:            A library for modular probabilistic modelling
description:
  A library for probabilistic programming using algebraic effects. The
  emphasis is on modular and reusable definitions of probabilistic models,
  and also compositional implementation of model execution (inference) in
  terms of effect handlers.

category:            Statistics
build-type:          Simple
extra-source-files:
  README.md
  CHANGELOG.md

tested-with:
  GHC == 8.6.5
  GHC == 8.8.4
  GHC == 8.10.4
  GHC == 9.0.2

library
  exposed-modules:
                      Control.Carrier.ObsReader,
                      Control.Carrier.Dist,
                      Control.Carrier.LPTracer,
                      Control.Carrier.SampTracer,
                      Control.Effect.ObsReader,
                      Control.Effect.SampObs,
                      Control.Effect.Dist,
                      Data.WorldPeace.Extra,
                      Data.WorldPeace.Product.Extra,
                      Inference.LW,
                      Inference.MH,
                      Inference.SIM,
                      Env,
                      Model,
                      PrimDist,
                      Sampler,
                      Trace

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:      base                          >= 4.11 && < 4.16,
                      ghc-prim                      >= 0.5.3 && < 0.8,
                      deepseq                       >= 1.4.4 && < 1.5,
                      containers                    >= 0.6.0 && < 0.7,
                      primitive                     >= 0.7.4 && < 0.8,
                      transformers                  >= 0.5.6 && < 0.6,
                      random                        >= 1.2.1 && < 1.3,
                      mtl                           >= 2.2.2 && < 2.3,
                      vector                        >= 0.12.3 && < 0.13,
                      dirichlet                     >= 0.1.0 && < 0.2,
                      log-domain                    >= 0.13.2 && < 0.14,
                      mwc-random                    >= 0.15.0 && < 0.16,
                      extensible                    >= 0.9 && < 0.10,
                      membership                    >= 0.0.1 && < 0.1,
                      lens                          >= 5.1.1 && < 5.2,
                      mwc-probability               >= 2.3.1 && < 2.4,
                      statistics                    >= 0.16.1 && < 0.17,
                      criterion                     >= 1.5.13 && < 1.6,
                      split                         >= 0.2.3 && < 0.3,
                      world-peace,
                      fused-effects

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math

executable prob-fx
  default-language: Haskell2010
  hs-source-dirs: examples
  main-is:        Main.hs
  other-modules:  CoinFlip,
                  DataSets,
                  HMM,
                  LDA,
                  LinRegr,
                  LogRegr,
                  Radon,
                  School,
                  SIR,
                  SIRNonModular,
  build-depends:  base,
                  prob-fx,
                  lens,
                  extensible,
                  fused-effects

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     examples
  main-is:            Test/Main.hs
  other-modules:      Test.Expected,
                      DataSets,
                      LDA,
                      LinRegr,
                      HMM,
                      SIR
  build-depends:      base,
                      containers,
                      extensible,
                      split,
                      prob-fx,
                      HUnit >= 1.6.0 && < 1.7.0,
                      lens,
                      fused-effects
  default-language:   Haskell2010

executable benchmark
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BenchmarkPrograms,
                       BenchmarkTests


  -- Other library packages from which modules are imported.
  build-depends:       base,
                       containers,
                       criterion,
                       deepseq,
                       extensible,
                       prob-fx

  hs-source-dirs:      benchmarking
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math
