cabal-version:      2.4
name:               fused-probfx-benchmarking
version:            0.1.0.0
synopsis:           Benchmarks for mbayes
author:             Oliver Killane
maintainer:         oliverkillane@gmail.com

executable fused-probfx-benchmarking
  main-is:             Main.hs

  other-modules:       BenchmarkPrograms,
                       BenchmarkTests


  build-depends:       base,
                       containers,
                       criterion,
                       deepseq,
                       extensible,
                       prob-fx

  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math