cabal-version:      2.4
name:               prob-fx-benchmarking
version:            0.1.0.0
synopsis:           Benchmarks for mbayes
author:             min-nguyen
maintainer:         minhnguyen1995@googlemail.com

executable prob-fx-benchmarking
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       BenchmarkPrograms,
                       BenchmarkTests


  -- Other library packages from which modules are imported.
  build-depends:       base,
                       containers,
                       criterion,
                       deepseq,
                       extensible,
                       prob-fx

  hs-source-dirs:      ./
  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math