cabal-version:      3.6
name:               mbayes-benchmarking
version:            0.1.0.0
synopsis:           Benchmarks for mbayes
author:             min-nguyen
maintainer:         minhnguyen1995@googlemail.com

executable mbayes-benchmarking
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    BenchmarkPrograms,
                      BenchmarkTests

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base,
                        criterion,
                        deepseq,
                        vector,
                        statistics,
                        log-domain,
                        monad-bayes
    hs-source-dirs:   ./
    default-language: Haskell2010
