cabal-version:      2.4
name:               prob-fx-benchmarking
version:            0.1.0.0
synopsis:           Benchmarks for mbayes
author:             min-nguyen
maintainer:         minhnguyen1995@googlemail.com

executable prob-fx-benchmarking
  main-is:             Main.hs

  other-modules:       BenchmarkPrograms,
                       BenchmarkTests


  build-depends:       base,
                       containers,
                       criterion,
                       deepseq,
                       extensible,
                       prob-fx

  hs-source-dirs:      ./
  default-language:    Haskell2010
  ghc-options:         -O2 -rtsopts -funfolding-use-threshold=16 -fexcess-precision -optc-O3 -optc-ffast-math